--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+opencc
+
+
 epubpacker @git+https://github.com/meng89/epubpacker@dev#egg=epubpacker
 
 xl @git+https://github.com/meng89/xl@dev#egg=xl
