--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 opencc
 
+html2image
+
 epubpacker@git+https://github.com/meng89/epubpacker@dev#egg=epubpacker
 
 xl@git+https://github.com/meng89/xl@dev#egg=xl
